Modification du css, bordure des images

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <header>
+
             <nav>
                 <ul>
                     <li>
@@ -38,10 +39,12 @@
         </header>
         <main>
             <section>
-                <img class="logo">
-                <h1>Limonade</h1>
-                <article>
-                    <img src="" alt="Photo du groupe Blackpink">
+                    <header>
+                        <img class="logo">
+                        <h1>Limonade</h1>
+                    </header>
+                <article id="blackpink">
+                    <p class="bordure-decalee"><img src="./images/black-pink-2.jpg" alt="Photo du groupe Blackpink"></p>
                     <h2>Blackpink</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
@@ -60,8 +63,10 @@
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="" alt="Image de l'EuroMillions">
+                <article id="euro">
+                    <header>
+                    </header>
+                    <p class="bordure-decalee"><img src="./images/resultat-tirage-euromillions-vendredi-22-novembre-2024.jpg" alt="Image de l'EuroMillions"></p>
                     <h2>EuroMillions</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
@@ -80,8 +85,8 @@
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="" alt="Photo de La Scaloneta">
+                <article id="Scaloneta">
+                    <p class="bordure-decalee"><img src="./images/unnamed.jpg" alt="Photo de La Scaloneta"></p>
                     <h2>La Scaloneta</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
