partie main de l'index, ajout des boutons, finalisation des bordures

--- a/index.html
+++ b/index.html
@@ -40,72 +40,98 @@
         <main>
             <section>
                     <header>
-                        <img class="logo">
+                        <img class="logo" src="./images/limonade_logo_sombre.svg">
                         <h1>Limonade</h1>
+                        <p>Bienvenue sur le fansite d'<span class="blackpink">Adeline</span>, <span class="euro">Maeva</span> et <span class="Scaloneta">Noa</span>. Nous allons
+                            vous présenter briévement nos trois sujets sur cette page.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                        </p>
                     </header>
-                <article id="blackpink">
-                    <p class="bordure-decalee"><img src="./images/black-pink-2.jpg" alt="Photo du groupe Blackpink"></p>
-                    <h2>Blackpink</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                        Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                        Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                        consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                        vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                        Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                        eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                        Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                        iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                        ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                        eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                        enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
-                    </p>
+                <article class="blackpink">
+                    <div class="bordure-decalee"><img src="./images/black-pink-2.jpg" alt="Photo du groupe Blackpink"></div>
+                    <div class="contenu">
+                        <h2>Blackpink</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
+                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                        </p>
+                        <p>
+                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
+                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                        </p>
+                        <div class="lien">
+                            <button type="button"><a href="#">Lien 1</a></button>
+                            <button type="button"><a href="#">Lien 2</a></button>
+                            <button type="button"><a href="#">Lien 3</a></button>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section>
-                <article id="euro">
-                    <header>
-                    </header>
+                <article class="euro">
                     <p class="bordure-decalee"><img src="./images/resultat-tirage-euromillions-vendredi-22-novembre-2024.jpg" alt="Image de l'EuroMillions"></p>
-                    <h2>EuroMillions</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                        Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                        Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                        consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                        vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                        Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                        eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                        Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                        iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                        ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                        eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                        enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
-                    </p>
+                    <div class="contenu">
+                        <h2>EuroMillions</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
+                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                        </p>
+                        <p>
+                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
+                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                            Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
+                            iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
+                            ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
+                            eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
+                            enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
+                        </p>
+                        <div class="lien">
+                            <button type="button"><a href="#">Lien 1</a></button>
+                            <button type="button"><a href="#">Lien 2</a></button>
+                            <button type="button"><a href="#">Lien 3</a></button>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section>
-                <article id="Scaloneta">
+                <article class="Scaloneta">
                     <p class="bordure-decalee"><img src="./images/unnamed.jpg" alt="Photo de La Scaloneta"></p>
-                    <h2>La Scaloneta</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                        Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                        Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                        consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                        vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                        Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                        eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                        Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                        iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                        ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                        eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                        enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
-                    </p>
+                    <div class="contenu">
+                        <h2>La Scaloneta</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                        </p>
+                        <p>
+                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
+                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
+                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                            Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
+                            iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
+                            ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
+                            eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
+                            enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
+                        </p>
+                        <div class="lien">
+                            <button type="button"><a href="#">Lien 1</a></button>
+                            <button type="button"><a href="#">Lien 2</a></button>
+                            <button type="button"><a href="#">Lien 3</a></button>
+                        </div>
+                    </div>
                 </article>
             </section>
-            
         </main>
+
         <footer>
             <article class="menuFooter">
                 <h3>Bienvenue</h3>
