--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="Images/limonade.ico">
         <title>Limonade</title>
-       
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poiret+One&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
     </head>
     <body>
-        <header>
+        <header class="headerNavbar">
             <nav class="navbar">
                 <div class="limonade">
                     <img src="Images/limonade.svg" alt="Logo de limonade" class="logo">
-                    <h1>Limonade</h1>
+                    <h2>Limonade</h2>
                 </div>
                 <div class="nav-link">
                     <ul>
-                        <li class="active"><a href="index.html">Accueil</a></li>
+                        <li class="active"><a href="index.html"><img src="Images/home.svg" 
+                            alt="logo d'accueil" class="logo"></a></li>
                         <li><a href="fansite1.html">Blackpink</a></li>
                         <li><a href="fansite2.html">EuroMillions</a></li>
                         <li><a href="fansite3.html">La Scaloneta</a></li>
@@ -40,67 +40,99 @@
         </header>
         <main>
             <section>
-                <article>
-                    <img src="" alt="Photo du groupe Blackpink">
-                    <h2>Blackpink</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                        Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                        Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                        consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                        vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                        Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                        eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                        Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                        iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                        ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                        eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                        enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
-                    </p>
+                    <header>
+                        <img class="logo" src="./images/limonade_logo_sombre.svg">
+                        <h1>Limonade</h1>
+                        <p>Bienvenue sur le fansite d'<span class="blackpink">Adeline</span>, <span class="euro">Maeva</span> et <span class="Scaloneta">Noa</span>. Nous allons
+                            vous présenter briévement nos trois sujets sur cette page.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                        </p>
+                    </header>
+                <article class="blackpink">
+                    <div class="bordure-decalee"><img src="./images/black-pink-2.jpg" alt="Photo du groupe Blackpink"></div>
+                    <div class="contenu">
+                        <h2>Blackpink</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
+                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                        </p>
+                        <p>
+                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
+                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                        </p>
+                        <div class="lien">
+                            <button type="button"><a href="#">Lien 1</a></button>
+                            <button type="button"><a href="#">Lien 2</a></button>
+                            <button type="button"><a href="#">Lien 3</a></button>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="" alt="Image de l'EuroMillions">
-                    <h2>EuroMillions</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                        Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                        Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                        consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                        vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                        Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                        eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                        Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                        iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                        ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                        eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                        enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
-                    </p>
+                <article class="euro">
+                    <p class="bordure-decalee"><img src="./images/resultat-tirage-euromillions-vendredi-22-novembre-2024.jpg" alt="Image de l'EuroMillions"></p>
+                    <div class="contenu">
+                        <h2>EuroMillions</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
+                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                        </p>
+                        <p>
+                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
+                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                            Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
+                            iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
+                            ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
+                            eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
+                            enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
+                        </p>
+                        <div class="lien">
+                            <button type="button"><a href="#">Lien 1</a></button>
+                            <button type="button"><a href="#">Lien 2</a></button>
+                            <button type="button"><a href="#">Lien 3</a></button>
+                        </div>
+                    </div>
                 </article>
             </section>
             <section>
-                <article>
-                    <img src="" alt="Photo de La Scaloneta">
-                    <h2>La Scaloneta</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                        Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                        Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                        consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                        vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                        Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                        eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                        Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                        iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                        ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                        eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                        enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
-                    </p>
+                <article class="Scaloneta">
+                    <p class="bordure-decalee"><img src="./images/unnamed.jpg" alt="Photo de La Scaloneta"></p>
+                    <div class="contenu">
+                        <h2>La Scaloneta</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
+                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                        </p>
+                        <p>
+                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
+                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
+                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
+                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                            Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
+                            iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
+                            ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
+                            eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
+                            enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
+                        </p>
+                        <div class="lien">
+                            <button type="button"><a href="#">Lien 1</a></button>
+                            <button type="button"><a href="#">Lien 2</a></button>
+                            <button type="button"><a href="#">Lien 3</a></button>
+                        </div>
+                    </div>
                 </article>
             </section>
-            
         </main>
+
         <footer>
             <article class="menuFooter">
                 <h3>Bienvenue</h3>
