--- a/index.html
+++ b/index.html
@@ -134,31 +134,36 @@
         </main>
 
         <footer>
-            <article class="menuFooter">
-                <h3>Bienvenue</h3>
-                <h4>Blackpink</h4>
-                <h4>EuroMillions</h4>
-                <h4>La Scaloneta</h4>
-                <h3>Contact</h3>
-            </article>
-            <article class="menuBlackpink">
-                <h5>Accueil</h5>
-                <h5>Lien 1</h5>
-                <h5>Lien 2</h5>
-                <h5>Lien 3</h5>
-            </article>
-            <article class="menuEuroMillions">
-                <h5>Accueil</h5>
-                <h5>Lien 1</h5>
-                <h5>Lien 2</h5>
-                <h5>Lien 3</h5>
-            </article>
-            <article class="menuScaloneta">
-                <h5>Accueil</h5>
-                <h5>Lien 1</h5>
-                <h5>Lien 2</h5>
-                <h5>Lien 3</h5>
-            </article>
+            <section class="planSite">
+                <article class="menuFooter">
+                    <h3>Bienvenue</h3>
+                    <h3>Blackpink</h3>
+                    <h3>EuroMillions</h3>
+                    <h3>La Scaloneta</h3>
+                    <h3>Contact</h3>
+                </article>
+                <article class="menuBlackpink">
+                    <h4>Blackpink</h4>
+                    <h5>Accueil</h5>
+                    <h5>Lien 1</h5>
+                    <h5>Lien 2</h5>
+                    <h5>Lien 3</h5>
+                </article>
+                <article class="menuEuroMillions">
+                    <h4>EuroMillions</h4>
+                    <h5>Accueil</h5>
+                    <h5>Lien 1</h5>
+                    <h5>Lien 2</h5>
+                    <h5>Lien 3</h5>
+                </article>
+                <article class="menuScaloneta">
+                    <h4>La Scaloneta</h4>
+                    <h5>Accueil</h5>
+                    <h5>Lien 1</h5>
+                    <h5>Lien 2</h5>
+                    <h5>Lien 3</h5>
+                </article>
+            </section>
             <p class="copyright">Limonade © 2024 - Tous droits réservés.</p>
         </footer>
     </body>
