--- a/fansite3.html
+++ b/fansite3.html
@@ -10,7 +10,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poiret+One&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="Images/argentina.ico">
+        <link rel="icon" type="image/x-icon" href="./Images/argentina.ico">
         <title>La Scaloneta</title>
     </head>
     <body>
