--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </p>
                     </header>
                 <article class="blackpink">
-                    <div class="bordure-decalee"><img src="./images/black-pink-2.jpg" alt="Photo du groupe Blackpink"></div>
+                    <div class="bordure-decalee"><img src="./images/blackpink3.jpg" alt="Photo du groupe Blackpink"></div>
                     <div class="contenu">
                         <h2>Blackpink</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -136,32 +136,40 @@
         <footer>
             <section class="planSite">
                 <article class="menuFooter">
-                    <h3>Bienvenue</h3>
-                    <h3>Blackpink</h3>
-                    <h3>EuroMillions</h3>
-                    <h3>La Scaloneta</h3>
-                    <h3>Contact</h3>
+                    <h2>Bienvenue</h2>
+                    <ul>
+                        <li>Blackpink</li>
+                        <li>EuroMillions</li>
+                        <li>La Scaloneta</li>
+                        <li>Contact</li>
+                    </ul>
                 </article>
                 <article class="menuBlackpink">
-                    <h4>Blackpink</h4>
-                    <h5>Accueil</h5>
-                    <h5>Lien 1</h5>
-                    <h5>Lien 2</h5>
-                    <h5>Lien 3</h5>
+                    <h2>Blackpink</h2>
+                    <ul>
+                        <li>Accueil</li>
+                        <li>Lien 1</li>
+                        <li>Lien 2</li>
+                        <li>Lien 3</li>
+                    </ul>
                 </article>
                 <article class="menuEuroMillions">
-                    <h4>EuroMillions</h4>
-                    <h5>Accueil</h5>
-                    <h5>Lien 1</h5>
-                    <h5>Lien 2</h5>
-                    <h5>Lien 3</h5>
+                    <h2>EuroMillions</h2>
+                    <ul>
+                        <li>Accueil</li>
+                        <li>Lien 1</li>
+                        <li>Lien 2</li>
+                        <li>Lien 3</li>
+                    </ul>
                 </article>
                 <article class="menuScaloneta">
-                    <h4>La Scaloneta</h4>
-                    <h5>Accueil</h5>
-                    <h5>Lien 1</h5>
-                    <h5>Lien 2</h5>
-                    <h5>Lien 3</h5>
+                    <h2>La Scaloneta</h2>
+                    <ul>
+                        <li>Accueil</li>
+                        <li>Lien 1</li>
+                        <li>Lien 2</li>
+                        <li>Lien 3</li>
+                    </ul>
                 </article>
             </section>
             <p class="copyright">Limonade © 2024 - Tous droits réservés.</p>
